# Causal-ICA-AROMA

./: .gitignore  README.md  pyproject.toml  requirements.txt
apptainer/: causal-ica-aroma.def
causal_ica_aroma/: causal_ICA_AROMA.py  causal_ICA_AROMA_functions.py
tests/: test_causal_ICA_AROMA_functions.py
